# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("SDL_L4")
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED CMAKE_C_STANDARD)

if(WIN32)
	set(SDL2_DIR "c:\\sdl2\\")
endif(WIN32)

find_package (SDL2 REQUIRED)

include_directories(${SDL2_INCLUDE_DIRS})

add_executable (${PROJECT_NAME} "src/main.c;src/misc.c;src/sdl_misc.c;src/sdl_drawing.c")
target_link_libraries (${PROJECT_NAME} ${SDL2_LIBRARIES})
